--- a/index.html
+++ b/index.html
@@ -457,6 +457,8 @@ canvas{ display:block }
       <canvas id="hexDrag" style="position:absolute;left:0;top:0;pointer-events:none"></canvas>
     </div>
   </div>
+<p class="note">Drag a hex from the palette and drop it on the honeycomb. Same-color neighbors merge into one stack; reach 6 to clear for 🪙 <b>50</b> chads. Quit to collect.</p>
+
 </div>
 
 
